# fastapi-todo

./: README.md  database.py  main.py  models.py  pyproject.toml  todos.db  todosapp.db
alembic/versions/: 521070f483bc_add_phone_number_to_users_table.py
router/: admin.py  auth.py  todos.py  users.py
